test/integration/bad/embedded_laplace/missing_args2.stan
model {
  target += laplace_marginal_tol();
}
